# webwatchdog

./: .env.example  .gitignore  DEPLOYMENT.md  IONOS-VPS-SETUP-SIMPLIFIED.md  NAMECHEAP_DB_SETUP.md  OAUTH-EMAIL-SETUP-GUIDE.md  README.md  app.py  auth.py  check_websites.py  cleanup_checks.py  database.py  db_utils.py  deploy.sh  email_sender.py  init_db.py  main.py  models.py  monitor.py  pyproject.toml  requirements.txt  routes.py  test_db_connection.py  user_settings.py
static/css/: style.css
static/js/: dashboard.js
templates/: base.html  dashboard.html
templates/auth/: forgot_password.html  login.html  register.html  reset_password.html
templates/settings/: user_settings.html
